{
    "name": "GameControls",
    "maps": [
        {
            "name": "GamePlay",
            "id": "f2773bcc-a8d5-4b7e-bab3-4aac8fa30e77",
            "actions": [
                {
                    "name": "MouseLeft",
                    "type": "Button",
                    "id": "461d0791-0d4f-46f0-90a4-799dfbfeb82a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MouseRight",
                    "type": "Button",
                    "id": "b81c3149-39b5-4d01-848f-a8c56279aa66",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MouseDrag",
                    "type": "PassThrough",
                    "id": "e79492ea-497b-4f3e-98f5-1935047088e1",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MouseRoll",
                    "type": "PassThrough",
                    "id": "2c22ad19-b060-48c0-9763-9043abe3f437",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Exit",
                    "type": "Button",
                    "id": "de895e11-6439-49cd-8206-399d5704336e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a476f582-15f2-490e-bf56-3b00b20a9fb4",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "282183c1-03ba-4475-81a4-e195a65f8834",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5293a304-50b6-497b-94d2-21330e73b1ea",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseDrag",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ab170fe7-284a-4a0d-81cf-9415babeb810",
                    "path": "<Mouse>/scroll",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseRoll",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4b84d003-ea08-4a7f-8291-bb076ea7038d",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Exit",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}